# triton-grpc-ocr

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: pages.yml
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/public/: coi-serviceworker.js
frontend/src/: App.css  App.tsx  index.css  types.ts
frontend/src/components/: CameraOverlay.tsx  Header.tsx  HistoryPanel.tsx  ImagePanel.tsx  ResultPanel.tsx  SummarySection.tsx  UploadArea.tsx
frontend/src/hooks/: useCamera.ts  useHistory.ts  useImage.ts  useLlm.ts  useOcrApi.ts  useRoi.ts
frontend/src/llm/: engine.ts
model_repository/_config/: charDict.json
model_repository/doc_ori/: config.pbtxt
model_repository/ocr_det/: config.pbtxt
model_repository/ocr_rec/: config.pbtxt
model_repository/textline_ori/: config.pbtxt
proto/: inference.proto
scripts/: generate_proto.bat  test_image.py
src/: client.py  inference_client.py  inference_server.py  inference_servicer.py  ocr_pipeline.py  triton_client.py  web_server.py
src/observability/: __init__.py  logger.py  metrics.py
src/pipeline/: __init__.py  context.py  runner.py  stages.py
src/queue/: __init__.py  task_queue.py
src/static/: index.html
src/static/assets/: index-BEGLm2_7.css  index-gdqQbZyp.js  react-vendor-CmPHDgiW.js  rolldown-runtime-Cs_9uf8X.js  transformers-CJAgM7ao.js
src/store/: __init__.py  result_store.py  vector_store.py
